[package]
name = "lelet"
description = "golang like task executor"
version = "1.0.16"
authors = ["Kurnia D Win <kurnia.d.win@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

repository = "https://github.com/win-t/lelet"
homepage = "https://github.com/win-t/lelet"
documentation = "https://docs.rs/lelet"
readme = "README.md"

keywords = [
  "futures",
  "task",
  "executor",
  "golang",
  "async",
]

categories = [
  "asynchronous",
  "concurrency",
]

[features]
default = []

# for debugging, will `trace!()` important event in the executor
tracing = ["log"]

[dependencies]
async-task = "2.1.1"
crossbeam-channel = "0.4.2"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
lazy_static = "1.4.0"
log = { version = "0.4.8", optional = true }
num_cpus = "1.12.0"
once_cell = "1.3.1"

[dev-dependencies]
futures-timer = "3.0.2"
simple_logger = "1.6.0"
