[package]
name = "lelet-io"
description = "I/O runtime for lelet"
version = "0.1.0"
authors = ["Kurnia D Win <kurnia.d.win@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

repository = "https://github.com/win-t/lelet"
homepage = "https://github.com/win-t/lelet"
documentation = "https://docs.rs/lelet-io"

[dependencies]
