[package]
name = "lelet-utils"
description = "lelet utils"
version = "0.1.3"
authors = ["Kurnia D Win <kurnia.d.win@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

repository = "https://github.com/win-t/lelet"
homepage = "https://github.com/win-t/lelet"
documentation = "https://docs.rs/lelet-utils"

[dependencies]
crossbeam-utils = "0.7.2"
