[package]
name = "lelet"
description = "golang like task executor"
version = "1.1.20"
authors = ["Kurnia D Win <kurnia.d.win@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

repository = "https://github.com/win-t/lelet"
homepage = "https://github.com/win-t/lelet"
documentation = "https://docs.rs/lelet"
readme = "README.md"

keywords = [
  "futures",
  "task",
  "executor",
  "golang",
  "async",
]

categories = [
  "asynchronous",
  "concurrency",
]

[features]
default = []

# for debugging, will `trace!()` important event in the executor
tracing = ["log"]

[dependencies]
async-task = "3.0.0"
crossbeam-channel = "0.4.2"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
lelet-utils = "0.1.2"
log = { version = "0.4.8", optional = true }
num_cpus = "1.13.0"
once_cell = "1.3.1"

[dev-dependencies]
futures-timer = "3.0.2"
simple_logger = "1.6.0"
