[package]
name = "lelet"
description = "golang like task executor"
version = "1.2.18"
authors = ["Kurnia D Win <kurnia.d.win@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

repository = "https://github.com/win-t/lelet"
homepage = "https://github.com/win-t/lelet"
documentation = "https://docs.rs/lelet"
readme = "README.md"

keywords = [
  "futures",
  "task",
  "executor",
  "golang",
  "async",
]

categories = [
  "asynchronous",
  "concurrency",
]

[features]
default = []

# for debugging, will `trace!()` important event in the executor
tracing = ["log"]

[dependencies]
async-task = "4.0.3"
async-task-old = { version = "3.0.0", package = "async-task" }
crossbeam-channel = "0.5.0"
crossbeam-deque = "0.8.0"
crossbeam-utils = "0.8.0"
lelet-utils = "0.3.5"
log = { version = "0.4.11", optional = true }
num_cpus = "1.13.0"

[dev-dependencies]
futures-timer = "3.0.2"
simple_logger = "1.11.0"
